# diffmat

./: .gitignore  README.md  pyproject.toml
diffmat.egg-info/: PKG-INFO  requires.txt  top_level.txt
examples/: example_to.py
src/: solver.py
src/diffmat/: helper.py  rvegen.py  solver.py  utilities.py  utils_compvoxel.py
src/diffmat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: test_grad.py  test_pfm.py  test_to.py
