[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffmat"
version = "0.1.0"
description = "Differentiable materials simulations"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Yang Chen", email = "yc2634@bath.ac.uk" }
]
dependencies = [
  "numpy",
  "matplotlib",
]

[project.urls]
Repository = "https://github.com/yang-chen-2022/diffmat.git"

[tool.setuptools.packages.find]
where = ["src"]
include = ["diffmat*"]
